PROYECTO01 PC - WAR>> 07/03/2014

--- a/DesignerRHN/DesignerRHN-war/web/Proyecto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Proyecto.xhtml
@@ -138,7 +138,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="#{msg['plataforma']}" sortBy="#{info.pryPlataforma.descripcion}" filterBy="#{info.pryPlataforma.descripcion}}" filterMatchMode="contains" width="133"
+                                <p:column headerText="#{msg['plataforma']}" sortBy="#{info.pryPlataforma.descripcion}" filterBy="#{info.pryPlataforma.descripcion}" filterMatchMode="contains" width="133"
                                           id="pryPlataforma" filterStyle="display: none; visibility: hidden;"  style="width: 70px; font-size: 11px">                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.pryPlataforma.descripcion}" style="width: 100px; font-size: 11px;text-transform: uppercase"/></f:facet>  
@@ -174,7 +174,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="#{msg['tipomoneda']}" sortBy="#{info.tipomoneda.nombre}" filterBy="#{info.tipomoneda.nombre}}" filterMatchMode="contains" width="133"
+                                <p:column headerText="#{msg['tipomoneda']}" sortBy="#{info.tipomoneda.nombre}" filterBy="#{info.tipomoneda.nombre}" filterMatchMode="contains" width="133"
                                           id="pryMoneda" filterStyle="display: none; visibility: hidden;"  style="width: 70px; font-size: 11px">                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.tipomoneda.nombre}" style="width: 100px; font-size: 11px;text-transform: uppercase"/></f:facet>  
