PROYECTO01 PC - WAR>> 17/03/2014

--- a/DesignerRHN/DesignerRHN-war/web/proceso.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/proceso.xhtml
@@ -329,7 +329,7 @@
                         </fieldset> 
 
                         <fieldset style="position: absolute; left: 10px; top: 440px; font-size: 12px; width: 833px; height:70px; border-radius: 10px; ">
-                            <legend style="font-size: 12px; color: blue"><strong>Clonar Proceso</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>#{msg['procesoClonar']}</strong></legend>
 
                             <h:outputText style="position: absolute; top: 15px; left: 30px" value="#{msg['nuevoClonado']}"/>
                             <p:inputText id="CodigoNuevoClonado" value="#{controlProceso.procesoNuevoClonado.codigo}" onclick="select();" style="position: absolute; top: 35px; left: 10px; width: 65px">
