--- a/DesignerRHN/DesignerRHN-war/web/declarante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/declarante.xhtml
@@ -55,7 +55,7 @@
                                 <p:commandButton id="duplicar" value="" style="background-image: url(Imagenes/duplicar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlDeclarantes.duplicarDeclarantes()}" process="@this"/>  
                                 <p:tooltip style="font-size: 12px" for="duplicar" value="#{msg['duplicar']}"  />
 
-                                <p:separator /> 
+                                <p:separator style="position: relative; top: -10px;"/> 
                                 <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlDeclarantes.verificarRastro()}" process="@this"/>  
                                 <p:tooltip style="font-size: 12px" for="rastro" value="#{msg['rastro']}" />
                             </p:toolbarGroup>  
