--- a/DesignerRHN/DesignerRHN-war/web/resources/linkare/calendar.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/resources/linkare/calendar.xhtml
@@ -23,6 +23,7 @@
         <cc:attribute name="decoration" default="none" shortDescription="Decoration default del componente"/>
         <cc:attribute name="width" default="99" shortDescription="Ancho componente referenciado en porcentaje"/>
         <cc:attribute name="height" default="99" shortDescription="Alto componente referenciado en porcentaje"/>
+        <cc:attribute name="disabled" default="false" shortDescription="Activo/Inactivo componente fecha"/>
         <cc:clientBehavior name="dateSelect" targets="calendar" event="dateSelect" />
         <cc:clientBehavior name="select" targets="calendar" event="select" />
         <cc:clientBehavior name="change" targets="calendar" event="change" />
@@ -34,7 +35,7 @@
     <cc:implementation>
         <!-- This component has been simplified but it could include any attribute of the inputMask 
          component that we wish our developer clients to be able to specify -->
-        <p:inputMask onclick="select();" style="height: #{cc.attrs.height}%;width: #{cc.attrs.width}%;color: #{cc.attrs.color};text-decoration: #{cc.attrs.decoration}" id="calendar" styleClass="masked_calendar" mask="#{cc.attrs.mask}" 
+        <p:inputMask onclick="select();" disabled="#{cc.attrs.disabled}" style="height: #{cc.attrs.height}%;width: #{cc.attrs.width}%;color: #{cc.attrs.color};text-decoration: #{cc.attrs.decoration}" id="calendar" styleClass="masked_calendar" mask="#{cc.attrs.mask}" 
                      value="#{cc.attrs.value}" >
             <f:convertDateTime pattern="#{cc.attrs.pattern}" timeZone="America/Bogota" locale="es" />
         </p:inputMask>
