PC PROYECTO01 --> WAR 28/03/2014

--- a/DesignerRHN/DesignerRHN-war/web/centrocosto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/centrocosto.xhtml
@@ -53,7 +53,7 @@
                                         <f:facet name="output"><h:outputText value="#{info.nombre}" style="text-transform: uppercase" /></f:facet>  
                                         <f:facet name="input">
                                             <p:inputText id="editarNombreCentroCoso" value="#{info.nombre}" style="font-size: 10px; border-radius: 0px; width: 93.5%; text-transform: uppercase">
-                                                <p:ajax event="change" listener="#{controlBetaCentrosCostos.modificandoCentroCosto(indice, 'N', info.codigo)}" update="@this" />
+                                                <p:ajax event="change" listener="#{controlBetaCentrosCostos.modificandoCentroCosto(indice, 'N', info.nombre)}" update="@this" />
                                                 <p:ajax event="select" listener="#{controlBetaCentrosCostos.cambiarIndice(indice, 1)}" />
                                             </p:inputText>
                                         </f:facet>  
