--- a/DesignerRHN/DesignerRHN-war/web/actividadbienestar.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/actividadbienestar.xhtml
@@ -48,7 +48,7 @@
                                     <p:cellEditor>
                                         <f:facet name="output"><h:outputText value="#{info.claseactividad}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:selectOneMenu effect="fold" value="#{info.claseactividad}" style="width:100px">  
+                                            <p:selectOneMenu effect="fold" value="#{info.claseactividad}" style="width:99%">  
                                                 <f:selectItem  itemLabel="" itemValue=" "/>  
                                                 <f:selectItem itemLabel="BIENESTAR" itemValue="BIENESTAR" />                
                                                 <f:selectItem itemLabel="EPIDEMIOLOGICA" itemValue="EPIDEMIOLOGICA"/>  
