--- a/DesignerRHN/DesignerRHN-war/web/formulacontratoentidad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/formulacontratoentidad.xhtml
@@ -36,6 +36,9 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
+                                    <f:facet name="footer">
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooProceso"  value="Tipo Entidad"/>
+                                    </f:facet>
                                 </p:column>
 
                             </p:dataTable>
@@ -96,7 +99,7 @@
 
 
                         <p:dialog header="TIPOS ENTIDADES" widgetVar="personasDialogo" draggable="false" resizable="false" closable="false" id="personasDialogo"  
-                                  showEffect="fade" hideEffect="fade" width="457" modal="true" style="font-size: 11px;">
+                                  showEffect="fade" hideEffect="fade" width="470" modal="true" style="font-size: 11px;">
                             <p:dataTable id="lovFormulas" style="font-size: 11px; width: 430px" var="personaFirmas" value="#{controlFormulasContratosEntidades.listaTiposEntidades}" rowKey="#{personaFirmas.secuencia}"
                                          selection="#{controlFormulasContratosEntidades.tipoentidadSeleccionado}" selectionMode="single" widgetVar="lovFormulas" scrollable="true" scrollWidth="450" scrollHeight="280"
                                          filteredValue="#{controlFormulasContratosEntidades.filtradoTiposEntidades}" emptyMessage="No se encontraron resultados con el criterio de busqueda.">              
@@ -248,8 +251,8 @@
 
 
                             <p:commandButton id="limpiar" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;"  actionListener="#{controlFormulasContratosEntidades.limpiarNuevoFormulasContratosEntidades()}" update="nuevaTipoempresa" process="@this"/>
-                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 220px;" actionListener="#{controlFormulasContratosEntidades.agregarNuevoFormulasContratosEntidades()}" process="@this" />
-                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 220px;"  update="nuevaTipoempresa" onclick="nuevoRegistroFormulasContratosEntidades.hide();"  actionListener="#{controlFormulasContratosEntidades.limpiarNuevoFormulasContratosEntidades()}"  process="@this"/>
+                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 190px; top: 220px;" actionListener="#{controlFormulasContratosEntidades.agregarNuevoFormulasContratosEntidades()}" process="@this" />
+                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 260px; top: 220px;"  update="nuevaTipoempresa" onclick="nuevoRegistroFormulasContratosEntidades.hide();"  actionListener="#{controlFormulasContratosEntidades.limpiarNuevoFormulasContratosEntidades()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
@@ -271,8 +274,8 @@
 
 
                             <p:commandButton id="limpiarD" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;"  actionListener="#{controlFormulasContratosEntidades.limpiarDuplicarFormulasContratosEntidades() }" update="duplicarTE"  process="@this"/>
-                            <p:commandButton id="duplicarVFP" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 220px;" actionListener="#{controlFormulasContratosEntidades.confirmarDuplicar()}"  process="@this" />
-                            <p:commandButton id="cancelarDuplicarVFP" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 220px;"  update="duplicarTE" onclick="duplicarRegistroFormulasContratosEntidades.hide();" actionListener="#{controlFormulasContratosEntidades.limpiarDuplicarFormulasContratosEntidades()}"  process="@this"/>
+                            <p:commandButton id="duplicarVFP" value="Agregar" style="font-size: 11px; position: absolute; left: 190px; top: 220px;" actionListener="#{controlFormulasContratosEntidades.confirmarDuplicar()}"  process="@this" />
+                            <p:commandButton id="cancelarDuplicarVFP" value="Cancelar" style="font-size: 11px; position: absolute; left: 260px; top: 220px;"  update="duplicarTE" onclick="duplicarRegistroFormulasContratosEntidades.hide();" actionListener="#{controlFormulasContratosEntidades.limpiarDuplicarFormulasContratosEntidades()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
                 </h:form>
