--- a/DesignerRHN/DesignerRHN-war/web/procesoproductivo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/procesoproductivo.xhtml
@@ -33,7 +33,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                 </p:column>
-                                <p:column headerText="Nombre" sortBy="#{info.descripcion}" filterBy="#{info.descripcion}" filterMatchMode="contains" id="descripcion" width="155" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="Descripción" sortBy="#{info.descripcion}" filterBy="#{info.descripcion}" filterMatchMode="contains" id="descripcion" width="250" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.descripcion}"  /></f:facet>  
                                         <f:facet name="input">
@@ -44,7 +44,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                 </p:column>
-                                <p:column headerText="Centro Costo" sortBy="#{info.centrocosto.nombre}" filterBy="#{info.centrocosto.nombre}" filterMatchMode="contains" id="personafir" width="140" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="Centro Costo" sortBy="#{info.centrocosto.nombre}" filterBy="#{info.centrocosto.nombre}" filterMatchMode="contains" id="personafir" width="250" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText style="text-transform: uppercase" value="#{info.centrocosto.nombre}"  /></f:facet>  
                                         <f:facet name="input">
@@ -55,6 +55,9 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
+                                    <f:facet name="footer">
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooCiudad"  value="Centro Costo"/>
+                                    </f:facet>
                                 </p:column>
 
                             </p:dataTable>
@@ -115,7 +118,7 @@
 
 
                         <p:dialog header="CENTROS COSTOS" widgetVar="personasDialogo" draggable="false" resizable="false" closable="false" id="personasDialogo"  
-                                  showEffect="fade" hideEffect="fade" width="457" modal="true" style="font-size: 11px;">
+                                  showEffect="fade" hideEffect="fade" width="470" modal="true" style="font-size: 11px;">
                             <p:dataTable id="lovCentrosCostos" style="font-size: 11px; width: 430px" var="personaFirmas" value="#{controlProcesosProductivos.listaCentrosCostos}" rowKey="#{personaFirmas.secuencia}"
                                          selection="#{controlProcesosProductivos.centrocostoSeleccionado}" selectionMode="single" widgetVar="lovCentrosCostos" scrollable="true" scrollWidth="450" scrollHeight="280"
                                          filteredValue="#{controlProcesosProductivos.filtradoCentrosCostos}" emptyMessage="No se encontraron resultados con el criterio de busqueda.">              
@@ -164,8 +167,8 @@
 
 
                     <p:dialog id="validacionDuplicarVigencia" header="ATENCIÓN...!" widgetVar="validacionDuplicarVigencia"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
-                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 10px; top: 15px;"  />
-                        <h:outputText value="Necesita : #{controlProcesosProductivos.mensajeValidacion}" style="position: absolute; left: 80px; top: 20px; width: 300px; font-weight:bold" />
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="80" height="60" style="position: absolute; left: 10px; top: 15px;"  />
+                        <h:outputText value="Necesita : #{controlProcesosProductivos.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 300px; font-weight:bold" />
                         <p:commandButton value="Aceptar" onclick="validacionDuplicarVigencia.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                     </p:dialog>
                     <p:dialog id="validacionModificar" header="ATENCIÓN...!" widgetVar="validacionModificar"  resizable="false" draggable="false" modal="true" height="95" width="350px" style="font-size: 12px" closable="false">  
@@ -189,8 +192,8 @@
                         <p:commandButton value="Aceptar" onclick="mostrarGuardar.hide();" style="position: absolute; top: 60px; left: 240px" process="@this" />
                     </p:dialog>
                     <p:dialog id="validacionNuevaCentroCosto" header="ATENCIÓN...!" widgetVar="validacionNuevaCentroCosto"  resizable="false" draggable="false" modal="true" height="105" width="450px" style="font-size: 12px" closable="false">  
-                        <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
-                        <h:outputText value="Para agregar es necesario adicionar: #{controlProcesosProductivos.mensajeValidacion}" style="position: absolute; left: 100px; top: 20px; width: 300px; font-weight:bold" />
+                        <h:graphicImage value="Imagenes/alerta.jpg" width="80" height="60" style="position: absolute; left: 30px; top: 10px;"  />
+                        <h:outputText value="Para agregar es necesario adicionar: #{controlProcesosProductivos.mensajeValidacion}" style="position: absolute; left: 120px; top: 20px; width: 300px; font-weight:bold" />
                         <p:commandButton value="Aceptar" onclick="validacionNuevaCentroCosto.hide();" style="position: absolute; top: 65px; left: 300px" process="@this" />
                     </p:dialog>
                     <p:hotkey bind="ctrl+f11" actionListener="#{controlProcesosProductivos.activarCtrlF11()}"/> 
@@ -251,7 +254,7 @@
                         <p:inputTextarea value="#{controlProcesosProductivos.editarProcesosProductivos.codigo}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                         <p:commandButton id="cancelarPais" value="Atras" onclick="editPais.hide();" style="position: absolute; top: 60px; left: 170px; font-size: 11px" process="@this"/>
                     </p:dialog>
-                    <p:dialog id="editSubtituloFirma" header="Editar Nombre" widgetVar="editSubtituloFirma" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px;text-transform: uppercase">  
+                    <p:dialog id="editSubtituloFirma" header="Editar Descripción" widgetVar="editSubtituloFirma" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px;text-transform: uppercase">  
                         <p:inputTextarea value="#{controlProcesosProductivos.editarProcesosProductivos.descripcion}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                         <p:commandButton id="cancelarSubtituloFirma" value="Atras" onclick="editSubtituloFirma.hide();" style="position: absolute; top: 60px; left: 170px; font-size: 11px" process="@this"/>
                     </p:dialog>
@@ -268,18 +271,18 @@
 
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
-                            <strong><h:outputText value="Código: "  style="font-size: 12px; position: absolute; top: 90px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Código: "  style="font-size: 12px; position: absolute; top: 90px;text-transform: uppercase" /></strong>
                             <p:inputText id="nuevoCodigo" value="#{controlProcesosProductivos.nuevoProcesosProductivos.codigo}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 85px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
-                            <strong><h:outputText value="Nombre "  style="font-size: 12px; position: absolute; top: 140px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Descripción: "  style="font-size: 12px; position: absolute; top: 140px;text-transform: uppercase" /></strong>
                             <p:inputText  id="nuevoNombre" value="#{controlProcesosProductivos.nuevoProcesosProductivos.descripcion}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 135px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
 
-                            <strong><h:outputText value="CENTRO COSTO "  style="font-size: 12px; position: absolute; top: 190px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*CENTRO COSTO: "  style="font-size: 12px; position: absolute; top: 190px;text-transform: uppercase" /></strong>
                             <p:inputText  id="nuevoPersona" value="#{controlProcesosProductivos.nuevoProcesosProductivos.centrocosto.nombre}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 185px;text-transform: uppercase">
                                 <p:ajax event="click" listener="#{controlProcesosProductivos.valoresBackupAutocompletar(1,'PERSONA')}" />
                                 <p:ajax event="change" listener="#{controlProcesosProductivos.autocompletarNuevo('PERSONA',controlProcesosProductivos.nuevoProcesosProductivos.centrocosto.nombre, 1)}" />
@@ -289,8 +292,8 @@
                             <p:watermark for="nuevoPersona" value="Persona" />
 
                             <p:commandButton id="limpiar" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 365px;"  actionListener="#{controlProcesosProductivos.limpiarNuevoProcesosProductivos()}" update="nuevaTipoempresa" process="@this"/>
-                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 365px;" actionListener="#{controlProcesosProductivos.agregarNuevoProcesosProductivos()}" process="@this" />
-                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 365px;"  update="nuevaTipoempresa" onclick="nuevoRegistroProcesosProductivos.hide();"  actionListener="#{controlProcesosProductivos.limpiarNuevoProcesosProductivos()}"  process="@this"/>
+                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 190px; top: 365px;" actionListener="#{controlProcesosProductivos.agregarNuevoProcesosProductivos()}" process="@this" />
+                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 260px; top: 365px;"  update="nuevaTipoempresa" onclick="nuevoRegistroProcesosProductivos.hide();"  actionListener="#{controlProcesosProductivos.limpiarNuevoProcesosProductivos()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
@@ -301,19 +304,19 @@
 
                         <p:panel id="duplicarTE" style="border: none;">
 
-                            <strong><h:outputText value="Código: "  style="font-size: 12px; position: absolute; top: 90px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Código: "  style="font-size: 12px; position: absolute; top: 90px;text-transform: uppercase" /></strong>
                             <p:inputText id="duplicarCodigo" value="#{controlProcesosProductivos.duplicarProcesosProductivos.codigo}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 85px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
-                            <strong><h:outputText value="Nombre "  style="font-size: 12px; position: absolute; top: 140px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Descripción: "  style="font-size: 12px; position: absolute; top: 140px;text-transform: uppercase" /></strong>
                             <p:inputText  id="duplicarNombre" value="#{controlProcesosProductivos.duplicarProcesosProductivos.descripcion}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 135px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Nombre" />
 
-                            <strong><h:outputText value="CENTRO COSTO"  style="font-size: 12px; position: absolute; top: 190px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*CENTRO COSTO:"  style="font-size: 12px; position: absolute; top: 190px;text-transform: uppercase" /></strong>
                             <p:inputText id="duplicarPersona" value="#{controlProcesosProductivos.duplicarProcesosProductivos.centrocosto.nombre}"  style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 185px;" >
                                 <p:ajax event="click" listener="#{controlProcesosProductivos.valoresBackupAutocompletar(2,'PERSONA')}" />
                                 <p:ajax event="change" listener="#{controlProcesosProductivos.autocompletarDuplicado('PERSONA', controlProcesosProductivos.duplicarProcesosProductivos.centrocosto.nombre , 2)}" />
