--- a/DesignerRHN/DesignerRHN-war/web/valoresconceptos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/valoresconceptos.xhtml
@@ -34,6 +34,9 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
+                                    <f:facet name="footer">
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooCiudad"  value="Codigo"/>
+                                    </f:facet>
                                 </p:column>
                                 <p:column headerText="Concepto" sortBy="#{info.concepto.descripcion}" filterBy="#{info.concepto.descripcion}" filterMatchMode="contains" id="personafir" width="300" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
@@ -46,6 +49,9 @@
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
+                                    <f:facet name="footer">
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooConcepto"  value="Concepto"/>
+                                    </f:facet>
                                 </p:column>
                                 <p:column headerText="Valor Voluntario" sortBy="#{info.valorunitario}" filterBy="#{info.valorunitario}" filterMatchMode="contains" id="cargo" width="145" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
@@ -116,7 +122,7 @@
 
 
                         <p:dialog header="CONCEPTOS" widgetVar="personasDialogo" draggable="false" resizable="false" closable="false" id="personasDialogo"  
-                                  showEffect="fade" hideEffect="fade" width="457" modal="true" style="font-size: 11px;">
+                                  showEffect="fade" hideEffect="fade" width="470" modal="true" style="font-size: 11px;">
                             <p:dataTable id="lovConceptos" style="font-size: 11px; width: 430px" var="personaFirmas" value="#{controlValoresConceptos.listaConceptos}" rowKey="#{personaFirmas.secuencia}"
                                          selection="#{controlValoresConceptos.conceptoSeleccionado}" selectionMode="single" widgetVar="lovConceptos" scrollable="true" scrollWidth="450" scrollHeight="280"
                                          filteredValue="#{controlValoresConceptos.filtradoConceptos}" emptyMessage="No se encontraron resultados con el criterio de busqueda.">              
@@ -250,7 +256,7 @@
                         <p:inputTextarea value="#{controlValoresConceptos.editarValoresConceptos.concepto.codigo}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                         <p:commandButton id="cancelarPais" value="Atras" onclick="editPais.hide();" style="position: absolute; top: 60px; left: 170px; font-size: 11px" process="@this"/>
                     </p:dialog>
-                    <p:dialog id="editConceptos" header="Editar Persona" widgetVar="editConceptos" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px;text-transform: uppercase">  
+                    <p:dialog id="editConceptos" header="Editar Concepto" widgetVar="editConceptos" resizable="false" draggable="false" modal="true" height="93" width="240" style="font-size: 12px;text-transform: uppercase">  
                         <p:inputTextarea value="#{controlValoresConceptos.editarValoresConceptos.concepto.descripcion}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                         <p:commandButton id="cancelarConceptos" value="Atras" onclick="editConceptos.hide();" style="position: absolute; top: 60px; left: 170px; font-size: 11px" process="@this"/>
                     </p:dialog>
@@ -266,7 +272,7 @@
 
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
-                            <strong><h:outputText value="codigo :"  style="font-size: 12px; position: absolute; top: 70px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Codigo:"  style="font-size: 12px; position: absolute; top: 70px;text-transform: uppercase" /></strong>
                             <p:inputText  id="nuevoCodigo" value="#{controlValoresConceptos.nuevoValoresConceptos.concepto.codigo}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 65px;text-transform: uppercase">
                                 <p:ajax event="click" listener="#{controlValoresConceptos.valoresBackupAutocompletar(1,'CODIGOCONCEPTO')}" />
                                 <p:ajax event="change" listener="#{controlValoresConceptos.autocompletarNuevoCodigoBigInteger('CODIGOCONCEPTO',controlValoresConceptos.nuevoValoresConceptos.concepto.codigo, 1)}" />
@@ -276,7 +282,7 @@
                             <p:watermark for="nuevoCodigo" value="Codigo" />
 
 
-                            <strong><h:outputText value="Concepto "  style="font-size: 12px; position: absolute; top: 120px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Concepto: "  style="font-size: 12px; position: absolute; top: 120px;text-transform: uppercase" /></strong>
                             <p:inputText  id="nuevoPersona" value="#{controlValoresConceptos.nuevoValoresConceptos.concepto.descripcion}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 115px;text-transform: uppercase">
                                 <p:ajax event="click" listener="#{controlValoresConceptos.valoresBackupAutocompletar(1,'CONCEPTO')}" />
                                 <p:ajax event="change" listener="#{controlValoresConceptos.autocompletarNuevo('CONCEPTO',controlValoresConceptos.nuevoValoresConceptos.concepto.descripcion, 1)}" />
@@ -285,15 +291,15 @@
                             <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 115px;  " id="btnnuevoPersonaFirma" icon="ui-icon-search" process="@this"  actionListener="#{controlValoresConceptos.asignarVariableConceptos(0)}"/>   
                             <p:watermark for="nuevoPersona" value="Persona" />
 
-                            <strong><h:outputText value="Valor Voluntario "  style="font-size: 12px; position: absolute; top: 170px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Valor Voluntario: "  style="font-size: 12px; position: absolute; top: 170px;text-transform: uppercase" /></strong>
                             <p:inputText id="nuevoCodigoVoluntario" value="#{controlValoresConceptos.nuevoValoresConceptos.valorunitario}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 165px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigoVoluntario" value="Valor Voluntario" />
 
                             <p:commandButton id="limpiar" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;"  actionListener="#{controlValoresConceptos.limpiarNuevoValoresConceptos()}" update="nuevaTipoempresa" process="@this"/>
-                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 220px;" actionListener="#{controlValoresConceptos.agregarNuevoValoresConceptos()}" process="@this" />
-                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 220px;"  update="nuevaTipoempresa" onclick="nuevoRegistroValoresConceptos.hide();"  actionListener="#{controlValoresConceptos.limpiarNuevoValoresConceptos()}"  process="@this"/>
+                            <p:commandButton id="agregarTE" value="Agregar" style="font-size: 11px; position: absolute; left: 190px; top: 220px;" actionListener="#{controlValoresConceptos.agregarNuevoValoresConceptos()}" process="@this" />
+                            <p:commandButton id="cancelarTE" value="Cancelar" style="font-size: 11px; position: absolute; left: 260px; top: 220px;"  update="nuevaTipoempresa" onclick="nuevoRegistroValoresConceptos.hide();"  actionListener="#{controlValoresConceptos.limpiarNuevoValoresConceptos()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
@@ -305,7 +311,7 @@
                         <p:panel id="duplicarTE" style="border: none;">
 
 
-                            <strong><h:outputText value="CODIGO"  style="font-size: 12px; position: absolute; top: 70px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*CODIGO:"  style="font-size: 12px; position: absolute; top: 70px;text-transform: uppercase" /></strong>
                             <p:inputText id="duplicarCodigo" value="#{controlValoresConceptos.duplicarValoresConceptos.concepto.codigo}"  style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 65px;" >
                                 <p:ajax event="click" listener="#{controlValoresConceptos.valoresBackupAutocompletar(2,'CODIGOCONCEPTO')}" />
                                 <p:ajax event="change" listener="#{controlValoresConceptos.autocompletarDuplicadoCodigoBigInteger('CODIGOCONCEPTO', controlValoresConceptos.duplicarValoresConceptos.concepto.codigo , 2)}" />
@@ -313,7 +319,7 @@
                             </p:inputText>
                             <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 65px;  " id="btnduplicarCodigo" icon="ui-icon-search" process="@this"  actionListener="#{controlValoresConceptos.asignarVariableConceptos(1)}"/>   
                             <p:watermark for="duplicarPersona" value="Codigo" />
-                            <strong><h:outputText value="CONCEPTO"  style="font-size: 12px; position: absolute; top: 120px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*CONCEPTO:"  style="font-size: 12px; position: absolute; top: 120px;text-transform: uppercase" /></strong>
                             <p:inputText id="duplicarPersona" value="#{controlValoresConceptos.duplicarValoresConceptos.concepto.descripcion}"  style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 115px;" >
                                 <p:ajax event="click" listener="#{controlValoresConceptos.valoresBackupAutocompletar(2,'CONCEPTO')}" />
                                 <p:ajax event="change" listener="#{controlValoresConceptos.autocompletarDuplicado('CONCEPTO', controlValoresConceptos.duplicarValoresConceptos.concepto.descripcion , 2)}" />
@@ -322,14 +328,14 @@
                             <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 115px;  " id="btnduplicarPersona" icon="ui-icon-search" process="@this"  actionListener="#{controlValoresConceptos.asignarVariableConceptos(1)}"/>   
                             <p:watermark for="duplicarPersona" value="CONCEPTO" />
 
-                            <strong><h:outputText value="Valor Voluntario "  style="font-size: 12px; position: absolute; top: 170px;text-transform: uppercase" /></strong>
+                            <strong><h:outputText value="*Valor Voluntario: "  style="font-size: 12px; position: absolute; top: 170px;text-transform: uppercase" /></strong>
                             <p:inputText id="duplicarCodigoVoluntario" value="#{controlValoresConceptos.duplicarValoresConceptos.valorunitario}" style="font-size: 12px; width: 135px; position: absolute; left: 180px; top: 165px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigoVoluntario" value="Valor Voluntario" />
                             <p:commandButton id="limpiarD" value="Limpiar" style=" font-size: 11px ;position: absolute; left: 20px; top: 220px;"  actionListener="#{controlValoresConceptos.limpiarDuplicarValoresConceptos() }" update="duplicarTE"  process="@this"/>
-                            <p:commandButton id="duplicarVFP" value="Agregar" style="font-size: 11px; position: absolute; left: 180px; top: 220px;" actionListener="#{controlValoresConceptos.confirmarDuplicar()}"  process="@this" />
-                            <p:commandButton id="cancelarDuplicarVFP" value="Cancelar" style="font-size: 11px; position: absolute; left: 250px; top: 220px;"  update="duplicarTE" onclick="duplicarRegistroValoresConceptos.hide();" actionListener="#{controlValoresConceptos.limpiarDuplicarValoresConceptos()}"  process="@this"/>
+                            <p:commandButton id="duplicarVFP" value="Agregar" style="font-size: 11px; position: absolute; left: 190px; top: 220px;" actionListener="#{controlValoresConceptos.confirmarDuplicar()}"  process="@this" />
+                            <p:commandButton id="cancelarDuplicarVFP" value="Cancelar" style="font-size: 11px; position: absolute; left: 260px; top: 220px;"  update="duplicarTE" onclick="duplicarRegistroValoresConceptos.hide();" actionListener="#{controlValoresConceptos.limpiarDuplicarValoresConceptos()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
                 </h:form>
